--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
   <p>Hello world!</p>
 
   <!-- build:js scripts/main.min.js -->
+  <script src="scripts/vendor/jquery.js"></script>
   <script src="scripts/main.js"></script>
   <!-- endbuild -->
 
