--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Key&amp;Dagger Studios</title>
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="shortcut icon" href="images/touch/icon-128x128.png">
+  <link rel="icon" href="images/favicon.ico">
 
   <!-- Add to homescreen for Safari on iOS -->
 
