--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Key&amp;Dagger Studios</title>
+  <title>Web Starter Kit</title>
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
