--- a/app/index.html
+++ b/app/index.html
@@ -1,60 +1,52 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
 
-  <title>Web Starter Kit</title>
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
 
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="shortcut icon" href="images/touch/icon-128x128.png">
-  <link rel="icon" href="images/favicon.ico">
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#2F3BA2">
 
-  <!-- Add to homescreen for Safari on iOS -->
+    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page (https://developers.google.com/webmasters/smartphone-sites/feature-phones) -->
+    <!-- <link rel="canonical" href="http://www.example.com/"> -->
 
-  <!-- Title icon for Win8 (144x144 + title color) -->
+    <!-- favicon: Drop your favicon in images -->
+    <!-- <link rel="icon" href="images/favicon.ico"> -->
 
-  <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page (https://developers.google.com/webmasters/smartphone-sites/feature-phones) -->
-  <!--
-  <link rel="canonical" href="http://www.example.com/">
-  -->
+    <!-- build:css styles/main.min.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 
-  <!-- build:css styles/main.min.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
+    <!-- build:js scripts/vendor/modernizr.min.js -->
+    <script src="scripts/vendor/modernizr.js"></script>
+    <!-- endbuild -->
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-  <!-- build:js scripts/vendor/modernizr.min.js -->
-  <script src="scripts/vendor/modernizr.js"></script>
-  <!-- endbuild -->
-</head>
-<body>
-  <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+    <!-- Add your site or application content here -->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world!</p>
+    <!-- build:js scripts/main.min.js -->
+    <script src="scripts/vendor/jquery.js"></script>
+    <script src="scripts/main.js"></script>
+    <!-- endbuild -->
 
-  <!-- build:js scripts/main.min.js -->
-  <script src="scripts/vendor/jquery.js"></script>
-  <script src="scripts/main.js"></script>
-  <!-- endbuild -->
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
-  </script>
-</body>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>
+  </body>
 </html>
